adding the background url

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body{
     font-family:"Poppins", sans-serif;
 }
 .banner{
-    background-image: url(./images/slider2.jpg);
+    background-image: url(../images/slider2.jpg);
     background-repeat: no-repeat;
     padding: 200px 0;
     background-size: cover;
